-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 0.9.3
-
Component/s: Delphi - Compiler
-
Labels:None
-
Patch Info:Patch Available
Some type names produce code that cannot be compiled:
typedef binary Bytes
For delphi, the following code is generated, referencing TBytes predefined type used to represent binary Thrift fields:
type TBytes = TBytes
which is illegal.