THRIFT-3115 Uncompileable code due to name collision with predefined used types Client: Delphi Patch: Jens Geyer